# CS2341-SearchEngine

./: .gitignore  AVL.hpp  CMakeLists.txt  DShashtable.h  Document.h  DocumentParser.cpp  DocumentParser.h  QueryProcessor.cpp  QueryProcessor.h  README.md  UserInterface.cpp  UserInterface.h  indexHandler.cpp  indexHandler.hpp  json.hpp  main.cpp  porter2_stemmer.cpp  tests.cpp  word.hpp
